Fixed an issue that lead to horizontal scrolling

--- a/src/assets/sass/components/_contributor-widget.scss
+++ b/src/assets/sass/components/_contributor-widget.scss
@@ -10,6 +10,10 @@
   flex-flow: row wrap;
   justify-content: flex-start;
   align-items: center;
+
+  @include breakpoint(tablet) {
+    flex-flow: column nowrap;
+  }
 }
 
 .contributor-widget {
@@ -21,10 +25,6 @@
   flex: 0 0 calc(30% - 32px);
 
   padding: 8px 16px;
-
-  @include breakpoint(tablet) {
-    flex: 0 0 100%;
-  }
 
   .avatar {
     @include size(46px);
